--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
         </button>
 
     </main>
+
+    <footer>
+        <address>Desenvolvido por Felipe Rodrigues &copy;2022</address>
+    </footer>
     <script src="src/js/index.js"></script>
 </body>
 
