Footer link Update

--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
 
     </main>
 
-    <footer>
-        <address>Desenvolvido por Felipe Rodrigues &copy;2022</address>
+    <footer class="footer">
+        <address class="info">
+            Desenvolvido por <a href="https://github.com/felipe-rodsilva" target="_blank">Felipe Rodrigues</a>  &copy;2022
+        </address>
     </footer>
     <script src="src/js/index.js"></script>
 </body>
